# reqfForge

./: .gitignore  .mcp.json  AGENTS.md  CONSTITUTION.md  GUIDE.md  README.md  TEST_REPORT.md  validation-report.md
.claude/: settings.json
.github/: copilot-instructions.md
.github/skills/rf-analyze/: SKILL.md
.github/skills/rf-clarify/: SKILL.md
.github/skills/rf-design/: SKILL.md
.github/skills/rf-discover/: SKILL.md
.github/skills/rf-extract/: SKILL.md
.github/skills/rf-help/: SKILL.md
agent/: pyproject.toml  server.py  test_server.py
agent/tools/: analyze.py  clarify.py  design.py  discover.py  extract.py  log.py  spec.py  status.py  utils.py
prompts/: 01-read-inputs.prompt.md  02-extract-requirements.prompt.md  03-clarify-requirements.prompt.md  04-analyze-requirements.prompt.md  05-generate-spec.prompt.md  06-generate-design-ready.prompt.md
specs/00-inputs/: user-description.md
specs/01-discovery/: answer-draft.md  assumptions.md  extracted-facts.md  glossary.md  open-questions.md  source-summary.md
specs/02-requirements/: business-rules.md  data-requirements.md  functional-requirements.md  non-functional-requirements.md  permission-requirements.md  product-vision.md  user-roles.md  workflow-requirements.md
specs/03-analysis/: acceptance-criteria.md  domain-model.md  edge-cases.md  state-transitions.md  use-cases.md  user-stories.md
specs/04-design-ready/: api-draft.md  database-draft.md  development-tasks.md  frontend-pages.md  requirement-spec.md  system-design-brief.md  test-cases.md
specs/05-versions/: changelog.md  decision-log.md
(+4 files in other folders)
