[project]
name = "spec-wingman-agent"
version = "0.1.0"
description = "MCP Server for SpecWingman workflow automation"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "anthropic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
